<resources>
    <string name="app_name">Safe Take Away</string>
    <string name="about_action">About</string>

    <!-- Strings used for fragments for navigation -->

        <!--Main Fragment-->
        <string name="main_fragment">Safe Take Away</string>
        <string name="restaurant">Restaurant</string>
        <string name="order">Order</string>
        <string name="exit">Exit</string>

        <!--Nav Graph-->
        <string name="list_restaurant">Restaurant List</string>
        <string name="new_restaurant">New Restaurant</string>
        <string name="list_order">Order List</string>
        <string name="edit_order">Edit Order</string>
        <string name="delete_order">Delete Order</string>

        <!--List Restaurant Menu-->
        <string name="new_restaurant_action">New Restaurant</string>
        <string name="edit_restaurant_action">Edit Restaurant</string>
        <string name="delete_restaurant_action">Delete Restaurant</string>

        <!--New Restaurant Menu-->
        <string name="create_new_restaurant_action">Create Restaurant</string>
        <string name="cancel_new_restaurant_action">Cancel</string>

        <!--Edit Restaurant Menu-->
        <string name="save_edited_restaurant_action">Save Edited Restaurant</string>
        <string name="cancel_edited_restaurant_action">Cancel Edited Restaurant</string>

        <!--Delete Restaurant Menu-->
        <string name="confirm_delete_restaurant_action">Confirm</string>
        <string name="cancel_delete_restaurant_action">Delete</string>

        <!--List Order Menu-->
        <string name="new_order_action">New Order</string>
        <string name="edit_order_action">Edit Order</string>
        <string name="delete_order_action">Delete Order</string>

        <!--Edit Order Menu-->
        <string name="save_edited_order_action">Save Edited Order</string>
        <string name="cancel_edited_order_action">Cancel Edited Order</string>

        <!--Delete Order Menu-->
        <string name="confirm_delete_order_action">Confirm</string>
        <string name="cancel_delete_order_action">Cancel</string>

        <!--Restaurant Fragment-->
        <string name="Category">Category</string>
        <string name="Restaurant">Restaurant</string>

        <!--Edit/Delete Order Fragment-->
        <string name="Date">Date</string>
        <string name="UserId">User ID</string>
        <string name="RestaurantId">Restaurant ID</string>
        <string name="PlatesId">Plates ID</string>
        <string name="totalPrice">Total Price</string>
        <string name="PaymentMethod">Payment Method</string>

        <!--Create Operations-->
        <string name="fill_this_field">Please, fill this field</string>
        <string name="error_new_restaurant">Error to create restaurant</string>
        <string name="restaurant_created_successfully">Restaurant Created Successfully</string>

        <!--Edit Operations-->
        <string name="error_edit_restaurant">Error to edit Restaurant</string>
        <string name="fill_payment_method">Please, fill the Payment Method</string>
        <string name="error_edit_order">Error to edit order</string>
        <string name="order_edited_successfully">Order edited successfully</string>

        <!--Delete Operations-->
        <string name="error_delete_restaurant">Error to delete Restaurant</string>
        <string name="restaurant_deleted_successfully">Restaurant Deleted Successfully</string>
        <string name="error_delete_order">Error deleting Order</string>
        <string name="order_deleted_successfully">Order Deleted Successfully</string>
</resources>